--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -16,7 +16,7 @@
       <h2>Create a Flight</h2>
       <form id="booking-form">
         <div class="form-group">
-          <label for="country-from">Origin:</label>
+          <label for="country-from">Country:</label>
           <select id="country-from" required>
             <option value="">Select Country</option>
             <option value="USA">USA</option>
@@ -25,7 +25,7 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="country-to">Destination:</label>
+          <label for="country-to">Departure Country:</label>
           <select id="country-to" required>
             <option value="">Select Country</option>
             <option value="USA">USA</option>
@@ -34,13 +34,21 @@
           </select>
         </div>
 
-        <div class="form-group">
-          <label for="arrival-date">Arrival Date:</label>
-          <input type="date" id="arrival-date" required />
-        </div>
+        
         <div class="form-group">
           <label for="departure-date">Departure Date:</label>
           <input type="date" id="departure-date" required />
+        </div>
+        <div class="form-group">
+          <label for="trip-type">Select Trip Type:</label>
+          <select id="trip-type" required>
+            <option value="one-way">One-Way</option>
+            <option value="round-trip">Round-Trip</option>
+          </select>
+        </div>
+        <div class="form-group"></div>
+          <label for="arrival-date">Arrival Date:</label>
+          <input type="date" id="arrival-date" required />
         </div>
 
         <div class="form-group">
