--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,7 +16,7 @@
     <h2>Book a Flight</h2>
     <form id="booking-form">
       <div class="form-group">
-        <label for="country-from">From Country:</label>
+        <label for="country-from"> Departure Country:</label>
         <select id="country-from" required>
           <option value="">Select Country</option>
           <option value="USA">USA</option>
@@ -25,7 +25,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="country-to">To Country:</label>
+        <label for="country-to">Arrival Country:</label>
         <select id="country-to" required>
           <option value="">Select Country</option>
           <option value="USA">USA</option>
@@ -35,7 +35,7 @@
       </div>
 
       <div class="form-group">
-        <label for="travel-date">Select Travel Date:</label>
+        <label for="travel-date">Departure Date:</label>
         <input type="date" id="travel-date" required>
       </div>
 
@@ -49,7 +49,7 @@
 
       <!-- Return Date (visible only for Round-Trip) -->
       <div id="return-date-div" style="display: none;">
-        <label for="return-date">Select Return Date:</label>
+        <label for="return-date">Departure Date:</label>
         <input type="date" id="return-date">
       </div>
 
